Separate flow from action name